--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -43,14 +43,23 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 set -g mouse on
 
 # Remap window navigation to vim
-unbind-key j
-bind-key j select-pane -D 
-unbind-key k
-bind-key k select-pane -U
-unbind-key h
-bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
+# unbind-key j
+# bind-key j select-pane -D 
+# unbind-key k
+# bind-key k select-pane -U
+# unbind-key h
+# bind-key h select-pane -L
+# unbind-key l
+# bind-key l select-pane -R
+
+# Use prefix + h/j/k/l to navigate between panes (like vim)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Enable repeating keys for smooth navigation
+set-option -g repeat-time 300
 
 # Resize the current pane using Alt + direction
 bind -n M-k resize-pane -U
@@ -110,7 +119,8 @@ set-window-option -g window-status-separator ""
 set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
 set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
 
-set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
+set-option -g renumber-windows on
+set-window-option -g window-status-current-format "#[bg=colour172,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour172,fg=colour239] #I #[bg=colour172,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour172,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
 # end tmux statusbar config
 
